Initial commit - https://games6x.github.io

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Play thousands of free unblocked games online. No download required. Perfect for school, work, or anywhere. Action, racing, puzzle, and more games available.">
     <meta name="keywords" content="unblocked games, free online games, school games, work games, action games, racing games, puzzle games">
     <meta name="author" content="Unblocked Games">
+    <meta name="msvalidate.01" content="9D16E596AD3A0F95BC6DE3E03A96BAC0" />
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="GAMES 6X - Unblocked Games Classroom 6x">
