Initial commit - https://games6x.github.io

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="unblocked games, free online games, school games, work games, action games, racing games, puzzle games">
     <meta name="author" content="Unblocked Games">
     <meta name="msvalidate.01" content="9D16E596AD3A0F95BC6DE3E03A96BAC0" />
+    <meta name="google-site-verification" content="FY2QGrLd0nQm-eGJj31iTv1nBaCdfaNqn-7ac8Arfqk" />
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="GAMES 6X - Unblocked Games Classroom 6x">
