Initial commit - https://games6x.github.io

--- a/play/1v1-lol.html
+++ b/play/1v1-lol.html
@@ -819,7 +819,7 @@
             const header = document.querySelector('.header-custom');
             const sidebar = document.getElementById('sidebar');
             const breadcrumb = document.querySelector('.breadcrumb-nav');
-            const footer = document.querySelector('.footer-modern');
+            const footer = document.querySelector('.footer-custom, .footer-modern');
             const sparkleContainer = document.querySelector('.sparkle-container');
             
             // Check if already in fullscreen
