Initial commit - https://games6x.github.io

--- a/index.html
+++ b/index.html
@@ -1714,17 +1714,17 @@
                         <h2 class="site-description-title">🎮 Your Ultimate Gaming Paradise - Play Anywhere, Anytime!</h2>
                         <p class="site-description-text">
                             Welcome to the ultimate destination for unblocked games! Play over 5000+ free games including 
-                            <strong>slope unblocked</strong>, <strong>minecraft unblocked</strong>, <strong>1v1 lol unblocked</strong>, 
-                            <strong>paper io unblocked</strong>, <strong>geometry dash unblocked</strong>, <strong>run 3 unblocked</strong>, 
-                            and <strong>five nights at freddys unblocked</strong>. Our comprehensive platform works perfectly with 
+                            <a href="play/slope.html" class="game-link"><strong>slope unblocked</strong></a>, <a href="play/minecraft-1.8.8.html" class="game-link"><strong>minecraft unblocked</strong></a>, <a href="play/1v1-lol.html" class="game-link"><strong>1v1 lol unblocked</strong></a>, 
+                            <a href="play/paper-io-2.html" class="game-link"><strong>paper io unblocked</strong></a>, <a href="play/geometry-dash.html" class="game-link"><strong>geometry dash unblocked</strong></a>, <a href="play/run-3.html" class="game-link"><strong>run 3 unblocked</strong></a>, 
+                            and <a href="play/five-nights-at-freddys.html" class="game-link"><strong>five nights at freddys unblocked</strong></a>. Our comprehensive platform works perfectly with 
                             <strong>unblocked games 66</strong>, <strong>unblocked games 76</strong>, <strong>unblocked games 6x</strong>, 
                             and other popular unblocked game websites.
                         </p>
                         <p class="site-description-text">
-                            Whether you're looking for <strong>action games unblocked</strong>, <strong>racing games unblocked</strong>, 
-                            <strong>sports games unblocked</strong>, or <strong>puzzle games unblocked</strong>, we have everything you need. 
-                            Our collection includes trending titles like <strong>among us unblocked</strong>, <strong>vex 6 unblocked</strong>, 
-                            <strong>tunnel rush unblocked</strong>, and <strong>retro bowl unblocked</strong>.
+                            Whether you're looking for <a href="cat/action.html" class="game-link"><strong>action games unblocked</strong></a>, <a href="cat/racing.html" class="game-link"><strong>racing games unblocked</strong></a>, 
+                            <a href="cat/sports.html" class="game-link"><strong>sports games unblocked</strong></a>, or <a href="cat/puzzle.html" class="game-link"><strong>puzzle games unblocked</strong></a>, we have everything you need. 
+                            Our collection includes trending titles like <a href="play/among-us.html" class="game-link"><strong>among us unblocked</strong></a>, <a href="play/vex-6.html" class="game-link"><strong>vex 6 unblocked</strong></a>, 
+                            <a href="play/tunnel-rush.html" class="game-link"><strong>tunnel rush unblocked</strong></a>, and <a href="play/retro-bowl.html" class="game-link"><strong>retro bowl unblocked</strong></a>.
                         </p>
                         <p class="site-description-text">
                             Perfect for students and office workers, our games are completely <strong>unblocked for school</strong> and 
